--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "nodemon src/app.js --exec \"npm run lint && node\"",
-    "lint": "eslint **/*.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js --exec \"npm run lint && node\"",
+    "lint": "eslint src/**/*.js"
   },
   "keywords": [],
   "author": "",
