--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongoose": "^5.0.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "node-restful": "^0.2.6"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
