replaced materialize css with bootstrap plus custom theme

--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "materialize-css": "^0.100.2",
+    "bootstrap": "^4.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
