--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "es6-promise": "^4.2.4",
+    "isomorphic-fetch": "^2.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
