--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "build": "node build/build.js",
-    "unittest": "cross-env NODE_ENV=test nyc mocha-webpack --webpack-config test/webpack.config.js --require test/setup.js test/**/*.spec.js"
+    "unittest": "cross-env NODE_ENV=test nyc mocha-webpack --webpack-config build/webpack.test.conf.js --require test/setup.js test/**/*.spec.js"
   },
   "nyc": {
     "include": [
