--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.3",
     "morgan": "^1.9.0",
-    "node-restful": "^0.2.6"
+    "node-restful": "^0.2.6",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
