--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
