--- a/server/package.json
+++ b/server/package.json
@@ -14,17 +14,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^2.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.3",
     "morgan": "^1.9.0",
     "node-restful": "^0.2.6",
     "passport": "^0.4.0",
-    "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
