--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,21 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "chrome",
+      "request": "launch",
+      "name": "vuejs: chrome",
+      "url": "http://localhost:8080",
+      "webRoot": "${workspaceFolder}/client/src",
+      "breakOnLoad": true,
+      "sourceMapPathOverrides": {
+          "webpack:///src/*": "${webRoot}/*"
+      }
+    },
+    {
       "type": "node",
       "request": "launch",
       "name": "Run Server",
-      "program": "${workspaceFolder}/server\\src\\app.js"
+      "program": "${workspaceFolder}/server/src/app.js"
     }
   ]
 }
